[tool.poetry]
name = "referral-system"
version = "0.1.0"
description = ""
authors = ["ikyol <aikyol.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
django = "4"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
python-decouple = "^3.8"
drf-yasg = "^1.21.7"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
